objects/Bouquet__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Bouquets</relationshipLabel>
        <relationshipName>Bouquets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliver_To__c</fullName>
        <label>Deliver To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <label>Bouquet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bouquet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bouquets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>